<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宝贝卫士</string>
    <string name="bottomtitle01">视频监控</string>
    <string name="bottomtitle02">幼儿园</string>
    <string name="bottomtitle03">聊天</string>
    <string name="bottomtitle04">我的信息</string>
    <string name="titlecamera">实时视频</string>
    <string name="titlecamerashow">这里看到您的宝贝哦</string>
    <string name="titlerecord">录像回放</string>
    <string name="titlerecordshow">这里存储着您手机里的录像</string>
    <string name="titlesnap">抓拍浏览</string>
    <string name="titlesnapshow">这里存储着您手机里的抓拍</string>
    <string name="titlefavor">收藏夹</string>
    <string name="titlefavorshow">这里有着您感兴趣的设备</string>
    <string name="titlenews">资讯</string>
    <string name="titlenewsshow">幼儿园的动态新闻</string>
    <string name="titlephoto">相册</string>
    <string name="titlephotoshow">幼儿园的照片</string>
    <string name="titlevideo">视频</string>
    <string name="titlevideoshow">幼儿园的视频</string>
    <string name="titletopic">话题</string>
    <string name="titletopicshow">师生话题</string>
    <string name="titlefood">食谱</string>
    <string name="titlefoodshow">幼儿园的食谱</string>
    <string name="titlecourse">课程</string>
    <string name="titlecourseshow">幼儿园的教学课程</string>
    <string name="titlechuqin">出勤</string>
    <string name="titlechuqinshow">幼儿的出勤记录</string>
    <string name="titlereply">回复管理</string>
    <string name="titleupdate">检查更新</string>
    <string name="titleabout">关于</string>
    <string name="contact">通讯录</string>
    <string name="myclass">我的幼儿园</string>
    <string name="phonenum">手机号：</string>
    <string name="exit_login">退出登录</string>
    <string name="oneclickback">再按一次后退键退出</string>
    <string name="updating">正在检查更新，请稍候...</string>
    <string name="start">请选择设备观看视频</string>
    <string name="str_scene">宝贝影音</string>
    <string name="login_label_address">服务器地址</string>
    <string name="login_label_username">用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="ip">服务器:</string>
    <string name="ipempty">服务器地址不能为空！</string>
    <string name="portempty">请在服务器地址后加端口号，如“”！</string>
    <string name="port">端口:</string>
    <string name="username">用户名:</string>
    <string name="usernameempty">用户名不能为空！</string>
    <string name="password">密\t\t码:</string>
    <string name="passwordempty">密码不能为空！</string>
    <string name="status">状\t态:</string>
    <string name="remember">记住密码\t</string>
    <string name="autolog">自动登录\t</string>
    <string name="cancel">取消</string>
    <string name="writeip">请输入服务器地址</string>
    <string name="writeusername">请输入您的用户名</string>
    <string name="writepassword">请输入您的密码</string>
    <string name="defaultuser">test</string>
    <string name="nonetwork">此应用程序需要网络接入。启用移动网络或WLAN下载数据。</string>
    <string name="bbwsloading">登录验证中...</string>
    <string name="loginerror">登录失败，请连接到网络后重试！</string>
    <string name="checkupdate">检查更新</string>
    <string name="updatefail">检查更新失败，请连接到网络后重试！</string>
    <string name="loadingview">设备读取中...</string>
    <string name="refreshloading">正在刷新设备列表...</string>
    <string name="refreshvideo">刷新设备列表</string>
    <string name="ensure">"确定"</string>
    <string name="aout_audiotrack">AudioTrack (native)</string>
    <string name="aout_opensles">OpenSL ES</string>
    <string name="vlc_demo_dir">文件夹</string>
    <string name="video_player_best_fit">最为合适</string>
    <string name="video_player_fit_horizontal">水平匹配</string>
    <string name="video_player_fit_vertical">垂直匹配</string>
    <string name="video_player_fill">填充</string>
    <string name="video_player_16x9">16:9</string>
    <string name="video_player_4x3">4:3</string>
    <string name="video_player_original">居中</string>
    <string name="url_server">/phoneinvoke.asmx</string>
    <string name="url_update">/update/version.xml</string>
    <string name="url_upload">/UploadFile/</string>
    <string name="url_pic">/pic/</string>
    <string name="device">设备</string>
    <string name="yuntai">云台</string>
    <string name="paizhao">拍照</string>
    <string name="luxiang">录像</string>
    <string name="setting">设置</string>
    <string name="set">选项设置</string>
    <string name="brightness">图像亮度调整</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="loginfail">用户名或密码错误</string>
    <string name="channel">选择通道</string>
    <string name="log">登录</string>
    <string name="yes">确定</string>
    <string name="menuwarn">报警信息</string>
    <string name="menudistance">远程回放</string>
    <string name="menupodcast">手机播客</string>
    <string name="menukindergarten">信息交流</string>
    <string name="menunews">新闻中心</string>
    <string name="menurecharge">账户充值</string>
    <string name="disrecord">远程录像</string>
    <string name="map">地图模式</string>
    <string name="help">操作说明</string>
    <string name="about">关于软件</string>
    <string name="close">关闭</string>
    <string name="namespace">MobileNewspaper</string>
    <string name="method_geturl">GetWebUrl</string>
    <string name="menu_bottom_news_text">资 讯</string>
    <string name="title_news_category_tops">新闻</string>
    <string name="title_news_category_sport">行业</string>
    <string name="title_news_category_play">民生</string>
    <string name="title_news_category_finance">要闻</string>
    <string name="title_news_category_science">科研</string>
    <string name="title_news_category_more">事迹</string>
    <string name="replay_failed">回复失败</string>
    <string name="method_getnewslist">GetNewsList</string>
    <string name="starttime">开始\n时间</string>
    <string name="endtime">结束\n时间</string>
    <string name="warnstarttime">开始时间</string>
    <string name="warnendtime">结束时间</string>
    <string name="offline">设备掉线了</string>
    <string name="nodevice">没有设备在线</string>
    <string name="onuser">在线设备</string>
    <string name="devlist">设备列表</string>
    <string name="nouser">没有设备在线</string>
    <string name="fail">连接服务器失败,返回重新登录?</string>
    <string name="quit">确定退出程序吗?</string>
    <string name="tip">抱歉，该功能暂时没有实现</string>
    <string name="play">网络播放</string>
    <string name="exit">退出</string>
    <string name="fileplay">文件播放</string>
    <string name="file_name">文件名</string>
    <string name="file_size">大小</string>
    <string name="file_contents">内容</string>
    <string name="file_lastmodified">最后修改时间</string>
    <string name="file_rename">重命名</string>
    <string name="file_delete">删除</string>
    <string name="file_info">详情</string>
    <string name="file_cannotopen">无法打开: %1$s</string>
    <string name="file_exists">文件已存在！</string>
    <string name="file_namecannotempty">文件名不能为空</string>
    <string name="file_rename_fail">重命名失败！</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="readme">        \n\t\t欢迎使用宝贝卫士Android客户端!\n\n
        \t\t此版本适用于Android2.3及以上固件手机！\n\n
        
        \t\t宝贝卫士，专为校园解决手机端视频监控、考勤等问题。\n\n
        
        \t\t宝贝卫士，为您的宝贝保驾护航！\n\n
		
		\t\t版本时间：2015-03-05\n\n
		\t\t版本号：V1.5\n</string>

</resources>