<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2" >

    <LinearLayout
        android:id="@+id/p_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/topbg" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/titleabout"
                android:textColor="@color/black_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:drawableLeft="@drawable/back_seletor"
                android:text="@string/back"
                android:textColor="@drawable/text_blue"
                android:textSize="@dimen/sixteen" />
        </RelativeLayout>

        <TextView
            android:id="@+id/abouttext"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/readme"
            android:textColor="@color/black_color"
            android:textSize="@dimen/sixteen" />
    </LinearLayout>

</RelativeLayout>