<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffb34b" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/bottomtitle01"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/front_layout_camera"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/front_img_01"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/iconcamera"
                    android:gravity="center"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/camera_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/front_img_01"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/titlecamera"
                    android:textColor="#525252"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/front_layout_record"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true" >

                <ImageView
                    android:id="@+id/front_img_02"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/iconrecord"
                    android:gravity="center"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/record_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/front_img_02"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/titlerecord"
                    android:textColor="#525252"
                    android:textSize="14dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/front_layout_snap"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/front_img_03"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/iconsnap"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/snap_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/front_img_03"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/titlesnap"
                    android:textColor="#525252"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/front_layout_favor"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/front_img_04"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/iconfavor"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/favor_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/front_img_04"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/titlefavor"
                    android:textColor="#525252"
                    android:textSize="14dp" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_weight="1" 
            android:background="@drawable/frontpage_bg"/>
    </LinearLayout>

</LinearLayout>